syntax = "proto3";

option java_multiple_files = true;
option java_package = "info.unterrainer.commons.overmindjsonata4javaserver.implementations.protos";
option java_outer_classname = "HelloWorldProtos";
option objc_class_prefix = "JSS";

package overmindjsonata4javaserver;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}